--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   getwidget: ^2.0.4
   geolocator: ^9.0.2
   google_maps_flutter: ^2.5.0
-
+  syncfusion_flutter_xlsio: ^23.1.36
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  open_file: ^3.3.2
 
 
 
